--- a/resources/js/lang/ar.json
+++ b/resources/js/lang/ar.json
@@ -20,7 +20,7 @@
     "shipping_dolar": "تكلفة الشحن بالدولار",
     "coc_dolar": "تكلفة الشهادة بالدولار",
     "checkout": "تم الشراء",
-    "all": "الإجمالي",
+    "total": "الإجمالي",
     "paid": "المدفوع",
     "vim": "رقم المحرك",
     "name": "الاسم",
@@ -109,5 +109,6 @@
     "login": "تسجيل الدخول",
     "phone": "رقم الهاتف",
     "number": "الرقم",
-    "debt": "الدين"
+    "debt": "الدين",
+    "add_car":"اضافة سيارة"
   }
